2003-10-23  Akim Demaille  <akim@epita.fr>

	Version 2.57g.
	* config/config.guess, config/config.sub: Upgrade from masters.

2003-10-23  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/fortran.m4 (AC_FC_SRCEXT): Functions using
	AC_COMPILE_IFELSE that use break skip the clean up.  So do it by
	hand...

2003-10-23  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/general.m4 (_AC_LINK_IFELSE, _AC_COMPILE_IFELSE):
	Don't forget to remove conftest.err.

2003-10-23  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/general.m4 (_AC_LIBOBJ): Don't insert twice the
	same object file in $LIBOBJS.
	Reported by Alexandre Duret-Lutz & Derek Robert Price.
	* doc/autoconf.texi (Generic Functions): Adjust.

2003-10-20  Paul Eggert  <eggert@twinsun.com>

	* lib/m4sugar/m4sh.m4 (_AS_TR_SH_PREPARE, _AS_TR_CPP_PREPARE):
	Use 'eval', so that the resulting configure scripts work even if
	the current directory has a weird file name like 'y%s+%pp%;s%@%_%g'.

2003-10-20  Daniel Jacobowitz  <drow@mvista.com>

	* lib/autoconf/lang.m4 (AC_LANG_WERROR): New macro.
	* lib/autoconf/general.m4 (_AC_COMPILE_IFELSE, _AC_PREPROC_IFELSE)
	(_AC_LINK_IFELSE): Check the werror flag.
	* doc/autoconf.texi (Generic Compiler Characteristics): Document
	AC_LANG_WERROR.
	* NEWS: Mention it.

2003-10-20  Daniel Jacobowitz  <drow@mvista.com>

	* lib/autoconf/lang.m4 (AC_NO_EXECUTABLES): Override
	_AC_COMPILER_EXEEXT to attempt a link.  If linking fails,
	override AC_LINK_IFELSE.

2003-10-15  Paul Eggert  <eggert@twinsun.com>

	* lib/m4sugar/m4sh.m4 (_AS_UNSET_PREPARE): Work around a bug in
	pdksh 5.2.14.  Bug reported by Ralf Corsepius.
	* doc/autoconf.texi (Shellology): Mention the Korn shell and pdksh.
	Mention /usr/dt/bin/dtksh on Solaris.
	(Shell Substitutions): Warn about $((...)).
	(Parentheses): New section.

2003-10-15  Kevin Ryde  <user42@zip.com.au>

	* doc/autoconf.texi (Function Portability): Add @prindex for exit.
	Add putenv and unsetenv.  Add sysconf _SC_PAGE_SIZE.
