@@ -1,3 +1,10 @@
+2003-10-27  Akim Demaille  <akim@epita.fr>
+
+	* lib/autoconf/general.m4 (_AC_RUN_IFELSE, _AC_INIT_PREPARE):
+	Don't remove core.* as it may remove valid user files.
+	* lib/autoconf/functions.m4 (AC_FUNC_SETVBUF_REVERSED)
+	(AC_FUNC_UTIME_NULL): Likewise.
+
 2003-10-23  Akim Demaille  <akim@epita.fr>
 
 	Version 2.57g.
